--- a/pattern.css
+++ b/pattern.css
@@ -51,6 +51,7 @@ h1 {padding: 5px;}
     background-color:white; 
     display: flex; 
     justify-content: center; 
+    flex-direction: column;
     flex-grow: 1; 
 }
 .linkbutton 
